# internal/domain/dto/models.gen.go
@@ -1,0 +1,26 @@
+// Package model provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
+package model
+
+// EnergyConsumption defines model for EnergyConsumption.
+type EnergyConsumption struct {
+	// Active Active energy consumed
+	Active []float32 `json:"active"`
+
+	// Address Address where the meter is located
+	Address string `json:"address"`
+	MeterId uint8  `json:"meter_id"`
+}
+
+// Error defines model for Error.
+type Error struct {
+	Code    string `json:"code"`
+	Message string `json:"message"`
+}
+
+// PeriodicConsumption defines model for PeriodicConsumption.
+type PeriodicConsumption struct {
+	DataGraph []EnergyConsumption `json:"data_graph"`
+	Period    string              `json:"period"`
+}
