# internal/interface/api/models.gen.go
@@ -1,49 +1,0 @@
-// Package api provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
-package api
-
-import (
-	openapi_types "github.com/oapi-codegen/runtime/types"
-)
-
-const (
-	Bearer_authScopes = "bearer_auth.Scopes"
-)
-
-// EnergyConsumption defines model for EnergyConsumption.
-type EnergyConsumption struct {
-	// Active Active energy consumed
-	Active []float32 `json:"active"`
-
-	// Address Address where the meter is located
-	Address string `json:"address"`
-	MeterId uint8  `json:"meter_id"`
-}
-
-// Error defines model for Error.
-type Error struct {
-	Code    string `json:"code"`
-	Message string `json:"message"`
-}
-
-// PeriodicConsumption defines model for PeriodicConsumption.
-type PeriodicConsumption struct {
-	DataGraph []EnergyConsumption `json:"data_graph"`
-	Period    string              `json:"period"`
-}
-
-// GetConsumptionParams defines parameters for GetConsumption.
-type GetConsumptionParams struct {
-	// MeterId Meter ids to filter by.
-	MeterId []uint8 `form:"meter_id" json:"meter_id"`
-
-	// StartDate Start date (format: YYYY-MM-DD).
-	StartDate openapi_types.Date `form:"start_date" json:"start_date"`
-
-	// EndDate End date (format: YYYY-MM-DD).
-	EndDate openapi_types.Date `form:"end_date" json:"end_date"`
-
-	// Period Period (any of [monthly, weekly, daily]).
-	Period string `form:"period" json:"period"`
-}
